# n_body_rs

./: .gitignore  Cargo.toml
src/: components.rs  main.rs  plugins.rs  resources.rs  systems.rs
src/space/: body.rs  mod.rs  space.rs  systems.rs
src/ui/: mod.rs  systems.rs
src/ui/components/: mod.rs
src/ui/components/fps_display/: components.rs  mod.rs  systems.rs
