[package]
name = "n_body_rs"
version = "0.1.0-dev-snapshot"
authors = ["Konstantin Opora"]
default-run = "n_body_rs"
edition = "2021"

[[bin]]
name = "n_body_rs"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
# bevy = "0.12.1" # for release do not use dynamic linking
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
